UIEXT-3349: WIP Implement most backend changes
* Some questions are still open, see TODO comments

* Migrate SharePoint List Reader to modern UI
  * … except for table transformations
* Remove every now unused legacy settings and dialog class
* Fix some Sonar and formatting issues

UIEXT-3349 (WebUI-Migration SharePoint Online List Reader)